force-app/main/default/objects/BL_ClientList__mdt/BL_ClientList__mdt.object-meta.xml
<CustomObject>
    <label>BL_ClientList</label>
    <pluralLabel>BL_ClientLists</pluralLabel>
</CustomObject>