force-app/main/default/objects/BL_ClientList__mdt/fields/Cache_TTL__c.field-meta.xml
<CustomField>
    <fullName>Cache_TTL__c</fullName>
    <label>Cache TTL (min)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>