force-app/main/default/objects/BL_ClientList__mdt/fields/cellToDisplay__c.field-meta.xml
<CustomField>
    <fullName>cellToDisplay__c</fullName>
    <label>cellToDisplay</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>