force-app/main/default/objects/BL_ClientList__mdt/fields/CountQuery__c.field-meta.xml
<CustomField>
    <fullName>CountQuery__c</fullName>
    <label>CountQuery</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>