force-app/main/default/objects/BL_ClientList__mdt/fields/image__c.field-meta.xml
<CustomField>
    <fullName>image__c</fullName>
    <label>Image</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>