force-app/main/default/objects/BL_ClientList__mdt/fields/Inner_Selects__c.field-meta.xml
<CustomField>
    <fullName>Inner_Selects__c</fullName>
    <label>Inner Selects</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>