force-app/main/default/objects/BL_ClientList__mdt/fields/Is_Manager_Only__c.field-meta.xml
<CustomField>
    <fullName>Is_Manager_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Manager Only</label>
    <type>Checkbox</type>
</CustomField>