force-app/main/default/objects/BL_ClientList__mdt/fields/isSortByReplacing__c.field-meta.xml
<CustomField>
    <fullName>isSortByReplacing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSortByReplacing</label>
    <type>Checkbox</type>
</CustomField>