force-app/main/default/objects/BL_ClientList__mdt/fields/limitCount__c.field-meta.xml
<CustomField>
    <fullName>limitCount__c</fullName>
    <label>limitCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>