force-app/main/default/objects/BL_ClientList__mdt/fields/Members_Condition__c.field-meta.xml
<CustomField>
    <fullName>Members_Condition__c</fullName>
    <label>Members Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>