force-app/main/default/objects/BL_ClientList__mdt/fields/Order_by__c.field-meta.xml
<CustomField>
    <fullName>Order_by__c</fullName>
    <label>Order by</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>