force-app/main/default/objects/BL_ClientList__mdt/fields/Per_page__c.field-meta.xml
<CustomField>
    <fullName>Per_page__c</fullName>
    <label>Per page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>