force-app/main/default/objects/BL_ClientList__mdt/fields/Store_Condition__c.field-meta.xml
<CustomField>
    <fullName>Store_Condition__c</fullName>
    <label>Store Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>