force-app/main/default/objects/BL_ClientList__mdt/fields/Tabs__c.field-meta.xml
<CustomField>
    <fullName>Tabs__c</fullName>
    <label>Tabs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>