force-app/main/default/objects/BL_ClientList__mdt/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
                <default>true</default>
                <label>ALL</label>
            </value>
            <value>
                <fullName>IOS</fullName>
            </value>
            <value>
                <fullName>WECHAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>