force-app/main/default/objects/BL_ClientList__mdt/fields/Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail__c</fullName>
    <label>Thumbnail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>