force-app/main/default/objects/BL_ClientList__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
                <default>true</default>
                <label>Main</label>
            </value>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Club</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>