force-app/main/default/objects/BL_ClientList__mdt/fields/useCase__c.field-meta.xml
<CustomField>
    <fullName>useCase__c</fullName>
    <label>useCase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>