force-app/main/default/objects/BL_ClientList__mdt/fields/UseStoreCode__c.field-meta.xml
<CustomField>
    <fullName>UseStoreCode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UseStoreCode</label>
    <type>Checkbox</type>
</CustomField>