force-app/main/default/objects/BL_ClientList__mdt/fields/Where_Condition__c.field-meta.xml
<CustomField>
    <fullName>Where_Condition__c</fullName>
    <label>Where Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>